# cantools-rs

./: .codecov.yml  .gitignore  Cargo.toml  README.md
.github/workflows/: coverage.yml  features.yml  minimal.yml  msrv.yml  style.yml  test.yml
examples/: time.rs
src/: data.rs  decode.rs  encode.rs  endian.rs  lib.rs  logging.rs  logs.rs  mask.rs  prelude.rs  signals.rs  utils.rs
src/formats/: mod.rs  peak.rs
src/io/: logs.rs  mod.rs
tests/: candump.rs  logging_candump_log.rs  logging_candump_raw.rs
