[package]
name = "cantools"
version = "0.1.0"
authors = ["tsabelmann"]
description = "A can-bus data analysis library"
edition = "2021"

license-file = "LICENSE"
documentation = "https://docs.rs/cantools"
repository = "https://github.com/tsabelmann/cantools"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["signals", "decode", "encode"]
decode = []
encode = []
signals = []
prelude = []