[package]
name = "cantools"
version = "0.2.1"
authors = ["Tim Lucas Sabelmann <tsabelmann>"]
description = "CAN-bus data analysis library"
keywords = ["can", "decode", "encode", "signals", "logging"]
edition = "2021"

license-file = "LICENSE"
homepage = "https://github.com/tsabelmann/gpscandump-rs"
documentation = "https://docs.rs/cantools"
repository = "https://github.com/tsabelmann/cantools"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
